# nexis

./: Cargo.toml  README.md
docs/plans/: 2026-03-02-feat-nexis-v0.2-design-improvements-plan.md
src/: main.rs
