[package]
name = "nexis"
version = "0.1.0"
edition = "2021"
description = "Fast wikilink and backlink analysis for Obsidian markdown vaults"
license = "MIT"
readme = "README.md"
repository = "https://github.com/terry-li-hm/nexis"
homepage = "https://github.com/terry-li-hm/nexis"
keywords = ["obsidian", "markdown", "wikilinks", "backlinks", "cli"]
categories = ["command-line-utilities"]

[[bin]]
name = "nexis"
path = "src/main.rs"

[dependencies]
clap       = { version = "4", features = ["derive"] }
walkdir    = "2"
regex      = "1"
rayon      = "1"
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
unicase    = "2"

[profile.release]
opt-level     = "z"
lto           = true
codegen-units = 1
panic         = "abort"
strip         = true
